2005-04-01  Michael Natterer  <mitch@gimp.org>

	* configure.in: revert previous commit because not all po files
	were added and the ALL_LINGUAS change was broken too.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-04-01  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_push): do nothing if
	this message is at the top of the stack already.

2005-04-01  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.c: added a statusbar message suggesting
	to use Shift to draw a straight line.

2005-04-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/rcm/rcm_dialog.c: keep the previews from expanding. Fixes
	bug #172284.

2005-04-01  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): removed sl until all required files
	have been added to CVS.

2005-03-31  Manish Singh  <yosh@gimp.org>

	* app/dialogs/quit-dialog.c (quit_dialog_new): cast to
	GIMP_CONTAINER_VIEW for gimp_container_view_get_dnd_widget()

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpfgbgview.[ch]
	* app/widgets/widgets-types.h: added new widget GimpFgBgView;
	somewhat similar to GimpFgBgEditor but a lot simpler.

	* app/widgets/gimpcoloreditor.c: use GimpFgBgView as preview widget.
	Closes bug #168592.

	* app/widgets/gimpfgbgeditor.c: gracefully handle a very small
	size allocation.

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: enable save via DND from the image
	list in the quit dialog.

2005-03-31  Sven Neumann  <sven@gimp.org>

	* app/dialogs/quit-dialog.c: use GTK_STOCK_DELETE for the "Discard
	Changes" button.

2005-03-31  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): use GTK_STOCK_DELETE for the
	"Don't Save" button.

2005-03-30  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_label_set_attributes): fixed